--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,18 +1,20 @@
 ---
 driver_plugin: vagrant
+driver_config:
+  customize:
+    memory: 1024
+
 platforms:
 - name: ubuntu-12.04
   driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_chef-11.2.0.box
-    require_chef_omnibus: 11.4.4
-    customize:
-      cpus: 2
-      memory: 1024
+    box: opscode-ubuntu-12.04-nochef
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
+    require_chef_omnibus: 11.6.0
     network:
       - ["private_network", {ip: "11.12.14.14"}]
   run_list:
   - recipe[apt]
+
 suites:
 - name: default
   run_list:
